# video-annotation-tool

video-annotation-tool/: .gitignore  README.md  pyproject.toml  requirements.txt
video-annotation-tool/src/: app.py
video-annotation-tool/src/core/: export.py  video_handler.py
video-annotation-tool/src/ui/: annotation_config.py  annotation_table.py  cell_editor.py  main_window.py  video_controls.py
video-annotation-tool/tests/: test_annotation_table.py  test_app_flow.py  test_export.py
